[project]
name = "app"
version = "0.1.0"
description = "A FastAPI backend that serves data scraped from vlr.gg"
requires-python = ">=3.13"
authors = [
    { name = "Akhil Narang", email = "me@akhilnarang.dev" }
]
dependencies = [
    "fastapi[all]",
    "httpx",
    "beautifulsoup4",
    "uvicorn[standard]",
    "gunicorn",
    "python-dateutil",
    "firebase-admin",
    "sentry-sdk[arq,fastapi,httpx,starlette]",
    "lxml",
    "redis[hiredis]",
    "arq",
    "semver",
    "rich",
    "sqlalchemy[asyncio]>=2.0.43",
    "alembic>=1.16.5",
    "aiosqlite>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "ty",
    "pre-commit",
]

[tool.ruff]
line-length = 120
exclude = ["__init__.py"]

[tool.pytest.ini_options]
pythonpath = "."
