[project]
name = "app"
version = "0.1.0"
description = "A FastAPI backend that serves data scraped from vlr.gg"
requires-python = ">=3.14"
authors = [
    { name = "Akhil Narang", email = "me@akhilnarang.dev" }
]
dependencies = [
    "fastapi[all]",
    "httpx",
    "beautifulsoup4",
    "uvicorn[standard]",
    "gunicorn",
    "python-dateutil",
    "firebase-admin",
    "sentry-sdk[arq,fastapi,httpx,starlette]",
    "lxml",
    "redis[hiredis]",
    "arq",
    "semver",
    "rich",
    "openai",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-regressions",
    "ruff>=0.15.21",
    "ty>=0.0.58",
]

[tool.ruff]
line-length = 120
exclude = ["__init__.py"]

[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "live_golden: live VLR parser golden regression tests",
]
