[project]
name = "app"
version = "0.1.0"
description = "A FastAPI backend that serves data scraped from vlr.gg"
requires-python = ">=3.14"
authors = [
    { name = "Akhil Narang", email = "me@akhilnarang.dev" }
]
dependencies = [
    "fastapi[all]",
    "httpx",
    "beautifulsoup4",
    "uvicorn[standard]",
    "gunicorn",
    "python-dateutil",
    "firebase-admin",
    "sentry-sdk[arq,fastapi,httpx,starlette]",
    "lxml",
    "redis[hiredis]",
    "arq",
    "semver",
    "rich",
    "openai",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-regressions",
    "ruff>=0.15.22",
    "ty>=0.0.62",
]

[tool.ruff]
line-length = 120
exclude = ["__init__.py"]

[tool.pytest.ini_options]
pythonpath = "."
# --strict-markers: an unregistered or typo'd marker must be a hard error, never a
# silent zero-match pass that leaves a scheduled job green while testing nothing.
addopts = "--strict-markers"
markers = [
    "live_golden: snapshot tests for frozen entities, fetched live from VLR",
    "live_health: structural-health checks for windowed VLR endpoints",
]
